<resources>
    <string name="app_name">My Application</string>
    <string name="itemName">Item Name</string>
    <string name="qty">Quantity</string>
    <string name="stock">Stock</string>
    <string name="dat">Date</string>
    <string name="buyPrice">Buy Price</string>
    <string name="selPrice">Sell  Price</string>
    <string name="save">Save</string>
    <string name="total">Total</string>
    <string name="balance">Balance</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="totalqty">Total Qty</string>
    <string name="totalbuyPrice">Total Buy Amt</string>
    <string name="totalsellPrice">Total Sell Amt</string>
    <string name="avg">Avg</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slide show</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="menu_report">Report</string>
    <string name="price">Price</string>
    <string name="enterItemName">Enter Itemname</string>
    <string name="enterQty">Enter Qty</string>
    <string name="enterPrice">Enter Price</string>
    <string name="selectType">Select Type</string>
    <string name="home">Home</string>
    <string name="report">Report</string>
    <string name="report_sale">Sale Report</string>
    <string name="report_buy">Buy Report</string>
    <string name="stock_sale">Stock Report</string>
    <string name="stock_report">StockReport</string>
    <string name="daybook">Day Book</string>
    <string name="ledger">Ledger</string>
    <string name="portfolio">Portfolio</string>
    <string name="pur_sale">Pur/Sale</string>
    <string name="depWith">Dep/Draw</string>
    <string name="enter_price">Enter Price</string>
    <string name="remarks">Remarks</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
</resources>