<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="10dp">


    <TextView
        android:id="@+id/txtItem"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/itemName"
        android:textColor="@color/white"

        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/edtItem"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/rect_border_white"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:inputType="text"
        android:hint="@string/enterItemName"
        android:textColor="@color/white"
        android:textColorHint="@color/dark_pink"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txtQty"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/qty"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtItem"

        />


    <EditText
        android:id="@+id/edtQty"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:background="@drawable/rect_border_white"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:hint="@string/enterQty"
        android:textColor="@color/white"
        android:textColorHint="@color/dark_pink"
        android:textStyle="bold"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/edtItem"
        app:layout_constraintTop_toBottomOf="@+id/edtItem"
        app:layout_constraintTop_toTopOf="@+id/txtQty" />



    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/price"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtQty"

        />


    <EditText
        android:id="@+id/edtPrice"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:background="@drawable/rect_border_white"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:hint="@string/enterPrice"
        android:textColor="@color/white"
        android:textColorHint="@color/dark_pink"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/edtItem"
        app:layout_constraintTop_toBottomOf="@+id/edtQty"
        app:layout_constraintTop_toTopOf="@+id/txtPrice" />



    <TextView
        android:id="@+id/txtSpn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/selectType"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrice"

        />


<!--    <Spinner-->
<!--        android:id="@+id/spn"-->
<!--        android:layout_width="130dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:background="@drawable/rect_border_white"-->
<!--        android:fontFamily="@font/montserrat"-->
<!--        android:gravity="center"-->
<!--        android:visibility="gone"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintStart_toStartOf="@+id/edtItem"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/edtPrice"-->
<!--        app:layout_constraintTop_toTopOf="@+id/txtSpn" />-->


    <RadioGroup android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/edtItem"
        app:layout_constraintTop_toBottomOf="@+id/edtPrice"
        app:layout_constraintTop_toTopOf="@+id/txtSpn"
        >
        <RadioButton android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/radioBuy" android:checked="true"
            android:textColor="@color/white"
            android:text="@string/buy">
        </RadioButton>
        <RadioButton android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/radioSell"
            android:text="@string/sell"
            android:textColor="@color/white">
        </RadioButton>

    </RadioGroup>


    <ImageView
        android:id="@+id/ivDate"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="10dp"
       android:src="@drawable/ic_calendar"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSpn"

        />


    <TextView
        android:id="@+id/txtDate"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:background="@drawable/rect_border_white"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/edtItem"
        app:layout_constraintTop_toBottomOf="@+id/spn"
        app:layout_constraintTop_toTopOf="@+id/ivDate" />


    <TextView
        android:id="@+id/txtSave"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:background="@drawable/rect_border_white_fill"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDate"
        android:layout_marginTop="70dp"
        android:text="@string/save"
        android:textColor="@color/white"

      />





</androidx.constraintlayout.widget.ConstraintLayout>