<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="10dp">







    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/enter_price"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"


        />


    <EditText
        android:id="@+id/edtPrice"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:background="@drawable/rect_border_white"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:hint="@string/enterPrice"
        android:textColor="@color/white"
        android:textColorHint="@color/dark_pink"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/txtPrice"
        android:layout_marginStart="30dp"


        app:layout_constraintTop_toTopOf="@+id/txtPrice" />



    <TextView
        android:id="@+id/txtSpn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:text="@string/selectType"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrice"

        />




    <RadioGroup android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/edtPrice"
        app:layout_constraintTop_toBottomOf="@+id/edtPrice"
        app:layout_constraintTop_toTopOf="@+id/txtSpn"
        >
        <RadioButton android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/radioDeposit" android:checked="true"
            android:textColor="@color/white"
            android:text="Deposit">
        </RadioButton>
        <RadioButton android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/radioDraw"
            android:text="WithDraw"
            android:textColor="@color/white">
        </RadioButton>

    </RadioGroup>



    <ImageView
        android:id="@+id/ivDate"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_calendar"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSpn"

        />


    <TextView
        android:id="@+id/txtDate"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:background="@drawable/rect_border_white"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/edtPrice"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup1"
        app:layout_constraintTop_toTopOf="@+id/ivDate" />



    <TextView
        android:id="@+id/txtRemark"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:text="@string/remarks"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivDate"

        />


    <EditText
        android:id="@+id/edtRemarks"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:background="@drawable/rect_border_white"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/txtDate"
        app:layout_constraintTop_toBottomOf="@+id/txtDate"
        app:layout_constraintTop_toTopOf="@+id/txtRemark" />


    <TextView
        android:id="@+id/txtSave"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:background="@drawable/rect_border_white_fill"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDate"
        android:layout_marginTop="70dp"
        android:text="@string/save"
        android:textColor="@color/white"

        />





</androidx.constraintlayout.widget.ConstraintLayout>