<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="325dp"
    android:layout_height="200dp"
    android:background="@color/white_shade1"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:id="@+id/cll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/cardItem"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="30dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtItem"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:hint="@string/itemName"
                        android:fontFamily="@font/montserrat"
                        android:textSize="12sp"
                        android:inputType="text"
                        />


                </com.google.android.material.textfield.TextInputLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardQty"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:padding="30dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp"
                app:layout_constraintTop_toBottomOf="@+id/cardItem"
                app:layout_constraintStart_toStartOf="parent">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtQty"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:hint="@string/qty"
                        android:fontFamily="@font/montserrat"
                        android:textSize="12sp"
                        android:inputType="number"
                        android:maxLength="5"
                        />


                </com.google.android.material.textfield.TextInputLayout>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardPrice"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:padding="30dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp"
                app:layout_constraintTop_toBottomOf="@+id/cardItem"
                app:layout_constraintStart_toEndOf="@+id/cardQty">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPrice"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:hint="@string/price"
                        android:fontFamily="@font/montserrat"
                        android:textSize="12sp"
                        android:inputType="number"
                        android:maxLength="5"
                        />


                </com.google.android.material.textfield.TextInputLayout>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:padding="30dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp"
                app:layout_constraintTop_toBottomOf="@+id/cardItem"
                app:layout_constraintStart_toEndOf="@+id/cardPrice">


                <Spinner
                    android:id="@+id/spn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />







            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardDelete"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:padding="30dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/dark_pink"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="Delete"
                    android:textAllCaps="true"
                    android:textColor="#fcfcfc" />


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardSave"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:padding="30dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/dark_pink"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"

                    android:text="Save"
                    android:textAllCaps="true"
                    android:textColor="#fcfcfc"

                    />


            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>